Add link to my reddit account

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@ permalink: /contact/
 	</div>
 	<div class="col-md-6">
 		<h2>Social Media</h2>
+			<li><a href="https://www.reddit.com/user/FrostyX_cz" title="FrostyX_cz on reddit">Reddit</a></li>
 			<li><a href="https://www.instagram.com/jakubkadlcik/" title="FrostyX on instagram">Instagram</a></li>
 			<li><a href="https://www.facebook.com/jakubkadlcik" title="FrostyX on facebook.com">Facebook</a></li>
 		<ul>
