Add section with my other writing

--- a/index.html
+++ b/index.html
@@ -11,4 +11,17 @@ title: Jakub Kadlčík
 {% include posts.html limit=10 %}
 <hr>
 
+
+<h2>Read further</h2>
+<p>
+  I happen to write also outside this blog. You can read my articles
+  on <a href="https://fedoramagazine.org/author/frostyx/">Fedora
+  Magazine</a>, or cringe at
+  my <a href="https://www.abclinuxu.cz/blog/Frostyho_blog">very old
+  blog posts on AbcLinuxu</a> (in Czech). If you follow my blog mainly
+  because of Copr, make sure to check out also
+  the <a href="https://fedora-copr.github.io/">official Copr
+  blog</a>.
+</p>
+
 {% include projects/tracer.html %}
