Everybody moved from freenode to libera.chat

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ permalink: /contact/
 		<h2>IRC</h2>
 		<ul>
 			<li>
-				<a href="http://webchat.freenode.net/" title="webchat - irc.freenode.net">irc.freenode.net</a>
+				<a href="https://web.libera.chat/" title="webchat - libera.chat">Libera.chat</a>
 				<ul>
 					<li>#fedora-buildsys</li>
 				</ul>
