--- a/contact.html
+++ b/contact.html
@@ -4,42 +4,60 @@ title: Contact
 permalink: /contact/
 ---
 
-<div class="row">
-	<div class="col-md-6">
-		<h2>Email</h2>
-		<ul>
-			<li><a href="mailto:frostyx@email.cz">frostyx@email.cz</a></li>
-		</ul>
-	</div>
-	<div class="col-md-6">
-		<h2>IRC</h2>
+<div id="contact" class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<div class="text-center img-row row">
+			<img src="/files/img/frostyx2.jpg" class="" width="200">
+			<h2>Jakub Kadlčík</h2>
+		</div>
 		<ul>
 			<li>
-				<a href="https://web.libera.chat/" title="webchat - libera.chat">Libera.chat</a>
-				<ul>
-					<li>#fedora-buildsys</li>
-				</ul>
+				<i class="fa fa-github" aria-hidden="true"></i>
+				<a href="http://github.com/FrostyX">FrostyX</a>
+			</li>
+			<li>
+				<i class="fa fa-instagram" aria-hidden="true"></i>
+				<a href="https://www.instagram.com/jakubkadlcik/">Instagram</a>
+			</li>
+			<li>
+				<i class="fa fa-facebook-square" aria-hidden="true"></i>
+				<a href="https://www.facebook.com/jakubkadlcik">Facebook</a>
+			</li>
+			<li><i class="fa fa-youtube-play" aria-hidden="true"></i>
+				<a href="https://www.youtube.com/@jakubkadlcik/">@jakubkadlcik</a>
+			</li>
+			<li>
+				<i class="fa fa-youtube-play" aria-hidden="true"></i>
+				<a href="https://www.youtube.com/@frostyx-unscripted">@frostyx-unscripted</a>
+			</li>
+			<li>
+				<i class="fa fa-reddit" aria-hidden="true"></i>
+				<a href="https://www.reddit.com/user/FrostyX_cz">u/FrostyX_cz</a>
 			</li>
 		</ul>
-	</div>
-</div>
-<hr>
-<div class="row">
-	<div class="col-md-6">
-		<h2>Web</h2>
+		<hr>
 		<ul>
-			<li><a href="http://github.com/FrostyX" title="FrostyX on GitHub.com">GitHub.com</a></li>
-			<li><a href="http://www.abclinuxu.cz/lide/frostyx" title="FrostyX on abclinuxu.cz">abclinuxu.cz</a></li>
-			<li><a href="https://badges.fedoraproject.org/user/frostyx" title="FrostyX on fedoraproject.org">fedoraproject.org</a></li>
+			<li>
+				<i class="fa fa-external-link" aria-hidden="true"></i>
+				<a href="https://matrix.to/#/@frostyx:matrix.org">@frostyx:matrix.org</a>
+			</li>
+			<li>
+				<i class="fa fa-external-link" aria-hidden="true"></i>
+				<a href="https://fosstodon.org/@FrostyX">@FrostyX@fosstodon.org</a>
+			</li>
+			<li>
+				<i class="fa fa-external-link" aria-hidden="true"></i>
+				<a href="http://www.abclinuxu.cz/lide/frostyx">abclinuxu.cz</a>
+			</li>
+			<li>
+				<i class="fa fa-external-link" aria-hidden="true"></i>
+				<a href="https://badges.fedoraproject.org/user/frostyx">fedoraproject.org</a>
+			</li>
 		</ul>
-	</div>
-	<div class="col-md-6">
-		<h2>Social Media</h2>
-			<li><a href="https://fosstodon.org/@FrostyX" title="FrostyX on fosstodon">Mastodon</a></li>
-			<li><a href="https://www.reddit.com/user/FrostyX_cz" title="FrostyX_cz on reddit">Reddit</a></li>
-			<li><a href="https://www.instagram.com/jakubkadlcik/" title="FrostyX on instagram">Instagram</a></li>
-			<li><a href="https://www.facebook.com/jakubkadlcik" title="FrostyX on facebook.com">Facebook</a></li>
+		<hr>
 		<ul>
+			<li><i class="fa fa-building-o" aria-hidden="true"></i> Red Hat</li>
+			<li><i class="fa fa-map-marker" aria-hidden="true"></i> Czech Republic</li>
 		</ul>
 	</div>
 </div>
